Packaging and button for tests